--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@popperjs/core": "^2.11.8",
     "@vitejs/plugin-react": "^4.3.3",
     "bootstrap": "^5.3.3",
+    "qrcode.react": "^4.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "typescript": "^5.7.2"
