--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "qrcode.react": "^4.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^7.0.1",
     "typescript": "^5.7.2"
   },
   "devDependencies": {
