--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "dependencies": {
     "@popperjs/core": "^2.11.8",
-    "@vitejs/plugin-react": "^4.3.3",
     "bootstrap": "^5.3.3",
     "qrcode.react": "^4.1.0",
     "react": "^18.3.1",
@@ -11,6 +10,14 @@
   },
   "devDependencies": {
     "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1"
-  }
+    "@types/react-dom": "^18.3.1",
+    "@vitejs/plugin-react": "^4.3.4",
+    "vite": "^6.0.1"
+  },
+  "scripts": {
+  "dev": "vite",
+  "link": "eslint .",
+  "build": "tsc -b && vite build",
+  "preview": "vite preview"
+}
 }
